--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-  <head></head>
+  <head>
+    <link REL=StyleSheet HREF="theme.css" TYPE="text/css">
+  </head>
   <body>
     <div class="header">
       <h1>Iowa Catholic Radio</h1>
