--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
     <link REL=StyleSheet HREF="theme.css" TYPE="text/css">
   </head>
   <body>
-    <div class="header">
+    <div class="vcontainer">
+    <div id="header">
       <h1>Iowa Catholic Radio</h1>
       <iframe src="http://free.timeanddate.com/clock/i5dhl3j0/n798/fn17/fs48/fcfff/tct/pct/ftb/tt0/td1" allowtransparency="true" height="62" width="1325" frameborder="0"></iframe>
+    </div>
+    <div class="hcontainer">
+      <div id="content-box">
+        <img src="http://i.imgur.com/PooHPDp.jpg">
+      </div>
+      <div id="sidebar">
+        <h2>Iowa Catholic Radio Programing Schedule</h2>
+      </div>
+    </div>
     </div>
   </body>
 </html>
