--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link REL=StyleSheet HREF="theme.css" TYPE="text/css">
   </head>
   <body>
+    <div id="page">
     <div class="vcontainer">
     <div id="header">
       <h1>Iowa Catholic Radio</h1>
@@ -15,6 +16,7 @@
       <div id="sidebar">
         <h2>Iowa Catholic Radio Programing Schedule</h2>
       </div>
+    </div>
     </div>
     </div>
   </body>
