--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <div id="page">
     <div class="vcontainer">
     <div id="header">
-      <h1>Iowa Catholic Radio</h1>
+      <h1>Iowa <b>Catholic</b> Radio</h1>
       <iframe src="http://free.timeanddate.com/clock/i5dhl3j0/n798/fn17/fs48/fcfff/tct/pct/ftb/tt0/td1" allowtransparency="true" height="62" width="1325" frameborder="0"></iframe>
     </div>
     <div class="hcontainer">
