--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
       </div>
       <div id="sidebar">
         <h2>Iowa Catholic Radio Programing Schedule</h2>
+        <div class="program-item"><span class="showtime">4:00 AM</span>Chaplet of Divine Mercy</div>
+        <div class="program-item"><span class="showtime">4:30 AM</span>Life is Worth Living with Archbishop Fulton Sheen</div>
+        <div class="program-item"><span class="showtime">5:00 AM</span>In Season and Out of Season with Father Tom DiLorenzo</div>
+        <div class="program-item"><span class="showtime">5:30 AM</span>Iowa Catholic Radio Rosary</div>
+        <div class="program-item"><span class="showtime">6:00 AM</span>Morning Glory</div>
+        <div class="program-item"><span class="showtime">7:00 AM</span>Jon Leonetti in the Morning</div>
+        <div class="program-item"><span class="showtime">8:00 AM</span>Catholic Connection with Teresa Tomeo</div>
+        <div class="program-item"><span class="showtime">9:00 AM</span>Local Programming</div>
+        <div class="program-item"><span class="showtime">9:30 AM</span>Iowa Catholic Radio Rosary</div>
+        <div class="program-item"><span class="showtime">10:00 AM</span>Christ is the Answer with Fr. John Riccardo</div>
+        <div class="program-item"><span class="showtime">11:00 AM</span>Take 2 With Jerry & Debbie</div>
+        <div class="program-item"><span class="showtime">12:00 PM</span>The Doctor Is In with Dr. Ray Guarendi </div>
+        <div class="program-item"><span class="showtime">1:00 PM</span>Called to Communion with Dr.David Anders</div>
+        <div class="program-item"><span class="showtime">2:00 PM</span>EWTN Open Line</div>
+        <div class="program-item"><span class="showtime">3:00 PM</span>Divine Mercy Chaplet</div>
+        <div class="program-item"><span class="showtime">3:30 PM</span>Kresta in the Afternoon</div>
+        <div class="program-item"><span class="showtime">5:00 PM</span>Catholic Answers Live</div>
+        <div class="program-item"><span class="showtime">7:00 PM</span>EWTN Evening Programming</div>
+        <div class="program-item"><span class="showtime">8:00 PM</span>Christ is the Answer with Fr. John Riccardo</div>
+        <div class="program-item"><span class="showtime">9:00 PM</span>Local Programming</div>
+        <div class="program-item"><span class="showtime">9:30 PM</span>Iowa Catholic Radio Rosary</div>
+        <div class="program-item"><span class="showtime">10:00 PM</span> Called to Communion with Dr.David Anders</div>
       </div>
     </div>
     </div>
