--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     </div>
     <div class="hcontainer">
       <div id="content-box">
-        <img src="http://i.imgur.com/PooHPDp.jpg">
+        <div class="table">
+          <div class="table-center">
+            <img src="http://i.imgur.com/PooHPDp.jpg">
+          </div>
+        </div>
       </div>
       <div id="sidebar">
         <h2>Iowa Catholic Radio Programing Schedule</h2>
