--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div id="content-box">
         <div class="table">
           <div class="table-center">
-            <img src="http://i.imgur.com/PooHPDp.jpg">
+            <iframe src="https://docs.google.com/presentation/d/1k8xnqiyUi938BYr--N_5A314fCqdK3ZDhqS69eXITw0/embed?start=true&loop=true&delayms=15000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
           </div>
         </div>
       </div>
