--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div class="vcontainer">
     <div id="header">
       <h1>Iowa <b>Catholic</b> Radio</h1>
-      <iframe src="http://free.timeanddate.com/clock/i5dhl3j0/n798/fn17/fs48/fcfff/tct/pct/ftb/tt0/td1" allowtransparency="true" height="62" width="1325" frameborder="0"></iframe>
+      <iframe src="http://free.timeanddate.com/clock/i5dipr7h/n142/fn17/fs30/fcfff/tct/pct/ftb/tt0" frameborder="0" width="828" height="40" allowTransparency="true"></iframe>
     </div>
     <div class="hcontainer">
       <div id="content-box">
