--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div id="sidebar">
         <h2>Iowa Catholic Radio Programing Schedule</h2>
         <div class="program-item"><span class="showtime">4:00 AM</span>Chaplet of Divine Mercy</div>
-        <div class="program-item"><span class="showtime">4:30 AM</span>Life is Worth Living with Archbishop Fulton Sheen</div>
-        <div class="program-item"><span class="showtime">5:00 AM</span>In Season and Out of Season with Father Tom DiLorenzo</div>
+        <div class="program-item"><span class="showtime">4:30 AM</span>Archbishop Fulton Sheen</div>
+        <div class="program-item"><span class="showtime">5:00 AM</span>In Season and Out of Season</div>
         <div class="program-item"><span class="showtime">5:30 AM</span>Iowa Catholic Radio Rosary</div>
         <div class="program-item"><span class="showtime">6:00 AM</span>Morning Glory</div>
         <div class="program-item"><span class="showtime">7:00 AM</span>Jon Leonetti in the Morning</div>
