--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div id="sidebar">
-        <h2>Iowa Catholic Radio Programing Schedule</h2>
+        <h2>Iowa Catholic Radio<br>Programing Schedule</h2>
         <div class="program-item"><span class="showtime">4:00 AM</span>Chaplet of Divine Mercy</div>
         <div class="program-item"><span class="showtime">4:30 AM</span>Archbishop Fulton Sheen</div>
         <div class="program-item"><span class="showtime">5:00 AM</span>In Season and Out of Season</div>
