--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
         <div class="program-item"><span class="showtime">5:30 AM</span>Iowa Catholic Radio Rosary</div>
         <div class="program-item"><span class="showtime">6:00 AM</span>Morning Glory</div>
         <div class="program-item"><span class="showtime">7:00 AM</span>Jon Leonetti in the Morning</div>
-        <div class="program-item"><span class="showtime">8:00 AM</span>Catholic Connection with Teresa Tomeo</div>
+        <div class="program-item"><span class="showtime">8:00 AM</span>Catholic Connection</div>
         <div class="program-item"><span class="showtime">9:00 AM</span>Local Programming</div>
         <div class="program-item"><span class="showtime">9:30 AM</span>Iowa Catholic Radio Rosary</div>
-        <div class="program-item"><span class="showtime">10:00 AM</span>Christ is the Answer with Fr. John Riccardo</div>
+        <div class="program-item"><span class="showtime">10:00 AM</span>Christ is the Answer</div>
         <div class="program-item"><span class="showtime">11:00 AM</span>Take 2 With Jerry & Debbie</div>
-        <div class="program-item"><span class="showtime">12:00 PM</span>The Doctor Is In with Dr. Ray Guarendi </div>
-        <div class="program-item"><span class="showtime">1:00 PM</span>Called to Communion with Dr.David Anders</div>
+        <div class="program-item"><span class="showtime">12:00 PM</span>The Doctor Is In</div>
+        <div class="program-item"><span class="showtime">1:00 PM</span>Called to Communion</div>
         <div class="program-item"><span class="showtime">2:00 PM</span>EWTN Open Line</div>
         <div class="program-item"><span class="showtime">3:00 PM</span>Divine Mercy Chaplet</div>
         <div class="program-item"><span class="showtime">3:30 PM</span>Kresta in the Afternoon</div>
         <div class="program-item"><span class="showtime">5:00 PM</span>Catholic Answers Live</div>
         <div class="program-item"><span class="showtime">7:00 PM</span>EWTN Evening Programming</div>
-        <div class="program-item"><span class="showtime">8:00 PM</span>Christ is the Answer with Fr. John Riccardo</div>
+        <div class="program-item"><span class="showtime">8:00 PM</span>Christ is the Answer</div>
         <div class="program-item"><span class="showtime">9:00 PM</span>Local Programming</div>
         <div class="program-item"><span class="showtime">9:30 PM</span>Iowa Catholic Radio Rosary</div>
-        <div class="program-item"><span class="showtime">10:00 PM</span> Called to Communion with Dr.David Anders</div>
+        <div class="program-item"><span class="showtime">10:00 PM</span> Called to Communion</div>
       </div>
     </div>
     </div>
