--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
+    <title>Iowa Catholic Radio</title>
     <link REL=StyleSheet HREF="theme.css" TYPE="text/css">
+    <meta http-equiv="refresh" content="300">
   </head>
   <body>
     <div id="page">
