--- a/livestream.html
+++ b/livestream.html
@@ -1,1 +1,7 @@
-<html><head></head><body><iframe src="https://www.youtube.com/embed/uHiY1LGkkxw?rel=0" allowfullscreen="" width="560" height="315" frameborder="0"></iframe></body></html>
+<html>
+  <head>
+  </head>
+  <body>
+    <iframe src="https://www.youtube.com/embed/uHiY1LGkkxw?rel=0" allowfullscreen="" frameborder="0"></iframe>
+  </body>
+</html>
